file cleanup and added popup removal on faded background click by default

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="stylesheet" href="./reset.css" /> -->
-    <link rel="stylesheet" href="./main.css" />
+
     <title>Document</title>
+    <script>
+      const message = "This is a modal!";
+    </script>
   </head>
 
   <body>
-    <button onclick="popUp(null, null)">
+    <button onclick="popUp(null, message)">
       get modal
     </button>
   </body>
